fix: drawer collapsed after a click on a link

--- a/packages/website-react/components/Layout.module.scss
+++ b/packages/website-react/components/Layout.module.scss
@@ -1,4 +1,4 @@
-$duration: .3s;
+$duration: .1s;
 .layout{
   display: flex;
   background: transparent;
